# Dong-AI-Company

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  skill-hermes.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: architecture.md  guide.md
examples/: 01_quick_project.py  02_graph_memory.py  03_experience_engine.py  04_api_server.py
scripts/: gen_cast.py
sdks/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json  vitest.config.ts
sdks/typescript/.github/workflows/: ci.yml
sdks/typescript/scripts/: postbuild.mjs
sdks/typescript/src/: cli.ts  errors.ts  index.ts  react.ts
sdks/typescript/tests/: client.test.ts
src/dong_ai/: __init__.py  api.py  browser_tool.py  ceo.py  ceo_memory.py  chat_ui.html  cli.py  codegraph_bridge.py  column_memory.py  company.py  cron.py  datastore.py  demo.py  design_engine.py  display.py  experience_engine.py  gateway.py  governance.py  key_manager.py  llm.py  logger.py  mcp_client.py  memory.py  metacognition.py  model_pool.py  plugin_registry.py  rate_limiter.py  setup_wizard.py  tool_executor.py  tui.py  vision.py  web_search.py  worker.py
src/dong_ai/domains/: __init__.py  autonomous.py  finance.py
src/dong_ai/mcp_servers/: web_tools.py
tests/: conftest.py  test_api.py  test_ceo.py  test_ceo_memory.py  test_datastore.py  test_experience_engine.py  test_harness.py  test_key_manager.py  test_model_pool.py  test_worker.py
